--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@types/node": "^9.4.4",
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.1",
     "typescript": "^2.7.1"
   }
 }
