--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.1.8",
+    "@types/enzyme-adapter-react-16": "^1.0.1",
+    "@types/enzyme-to-json": "^1.5.0",
     "@types/jest": "^22.1.2",
     "@types/node": "^9.4.4",
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.1",
     "typescript": "^2.7.1"
   }
 }
