--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts-ts": "2.13.0"
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts-ts": "2.13.0",
+    "rx": "^4.1.0",
+    "rx-dom": "^7.0.3"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -18,6 +22,10 @@
     "@types/node": "^9.4.4",
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
+    "@types/react-router": "^4.0.21",
+    "@types/react-router-dom": "^4.2.3",
+    "@types/rx": "^4.1.1",
+    "@types/rx-dom": "^7.0.0",
     "typescript": "^2.7.1"
   }
 }
