--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "enzyme-to-json": "^3.3.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts-ts": "2.13.0"
+    "react-scripts-ts": "2.13.0",
+    "react-test-renderer": "^16.2.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -24,6 +25,7 @@
     "@types/node": "^9.4.4",
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
+    "@types/react-test-renderer": "^16.0.1",
     "typescript": "^2.7.1"
   }
 }
