--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.13.0",
     "redux": "^3.7.2",
+    "redux-observable": "^0.18.0",
     "rx": "^4.1.0",
-    "rx-dom": "^7.0.3"
+    "rx-dom": "^7.0.3",
+    "rxjs": "^5.5.6"
   },
   "scripts": {
     "start": "react-scripts-ts start",
